--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,8 @@
 {
     "editor.formatOnSave": true, // Automatically format the file when saving
     "editor.codeActionsOnSave": {
-      "source.fixAll.eslint": true, // Apply all auto-fixable ESLint rules on save
-      "source.addMissingImports": true // Automatically add missing imports on save
+      "source.fixAll.eslint": "explicit",
+      "source.addMissingImports": "explicit"
     },
     "editor.defaultFormatter": "esbenp.prettier-vscode" // Use Prettier as the default formatter
   }
