--- a/package.json
+++ b/package.json
@@ -14,20 +14,28 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/material": "^5.16.0",
+    "aws-amplify": "^6.4.3",
     "axios": "^1.7.2",
     "next": "^14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.0.4",
+    "@aws-amplify/backend-cli": "^1.2.2",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "aws-cdk": "^2.151.0",
+    "aws-cdk-lib": "^2.151.0",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.23.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.4",
     "postcss": "^8",
     "sass": "^1.77.6",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "tsx": "^4.16.5",
+    "typescript": "^5.5.4"
   }
 }
